--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ repositories {
 // 'implementation' configuration allows to expose dependencies with 'runtime' scope in pom
 dependencies {
     implementation platform("org.springframework.boot:spring-boot-dependencies:2.6.14")
+
+    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 java {
