--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ group = 'com.iexec.commons'
 
 ext {
     gitBranch = 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
+
+    dockerJavaVersion = '3.2.12'
 }
 
 if (gitBranch != 'main' && gitBranch != 'master' && ! (gitBranch ==~ '(release|hotfix|support)/.*')) {
@@ -35,9 +37,29 @@ repositories {
 // 'api' configuration allows to expose dependencies with 'compile' scope in pom
 // 'implementation' configuration allows to expose dependencies with 'runtime' scope in pom
 dependencies {
+    // iexec
+    implementation "com.iexec.common:iexec-common:$iexecCommonVersion"
+
     implementation platform("org.springframework.boot:spring-boot-dependencies:2.6.14")
 
+    // docker
+    implementation "com.github.docker-java:docker-java:${dockerJavaVersion}"
+    // Using zerodep until docker client stops blocking after having called
+    // listContainersCmd() over httpclient5
+    implementation "com.github.docker-java:docker-java-transport-zerodep:${dockerJavaVersion}"
+
+    // apache commons.lang3
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+    // tests
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.mockito:mockito-junit-jupiter'
+    testImplementation 'org.assertj:assertj-core'
+    // spring-boot-test to capture test outputs
+    testImplementation 'org.springframework.boot:spring-boot-test'
+    // spring-test for ReflectionTestUtils
+    testImplementation 'org.springframework:spring-test'
+    testImplementation 'org.awaitility:awaitility'
 }
 
 java {
