--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'java-library'
-    id 'io.freefair.lombok' version '8.6'
+    id 'io.freefair.lombok' version '8.10.2'
     id 'jacoco'
-    id 'org.sonarqube' version '5.0.0.4638'
+    id 'org.sonarqube' version '5.1.0.4882'
     id 'maven-publish'
 }
 
@@ -88,6 +88,7 @@ tasks.withType(Test).configureEach {
 }
 
 test {
+    // systemProperties System.properties
     reports {
         junitXml.required = true
         html.required = true
