--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@ version=1.2.2
 
 nexusUser
 nexusPassword
+
+systemProp.DOCKER_IO_USER=<docker-hub-username>
+systemProp.DOCKER_IO_PASSWORD=<docker-hub-password>
